--- a/practice/src/assets/scss/section/_section2.scss
+++ b/practice/src/assets/scss/section/_section2.scss
@@ -61,3 +61,8 @@ summary::-webkit-details-marker {
   background-color: white;
   overflow: hidden;
 }
+
+.summary-text {
+  text-indent: -1em;
+  padding-left: 1em;
+}
