--- a/practice/src/common/_header.ejs
+++ b/practice/src/common/_header.ejs
@@ -2,10 +2,100 @@
 
 
   <div class="headerWrap">
-    <h1 class="headerWrap__Ttl">
+    <h1 class="headerWrap__ttl">
       Review
     </h1>
   </div>
+
+  <nav class="side">
+    <ul class="sideWrap">
+      <li class="sideCont">
+        <a href="#section1" class="sideLink u-link">
+          <p class="sideText">scroll-snap</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section2" class="sideLink u-link">
+          <p class="sideText">details+summary</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section3" class="sideLink u-link">
+          <p class="sideText">pulse</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section4" class="sideLink u-link">
+          <p class="sideText">SVG animation</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section5" class="sideLink u-link">
+          <p class="sideText">flip-reverse</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section6" class="sideLink u-link">
+          <p class="sideText">background-clip</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section7" class="sideLink u-link">
+          <p class="sideText">mouse-stalker</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section8" class="sideLink u-link">
+          <p class="sideText">Sass Loop</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section9" class="sideLink u-link">
+          <p class="sideText">date attribute</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section10" class="sideLink u-link">
+          <p class="sideText">clip-path</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section11" class="sideLink u-link">
+          <p class="sideText">spin text</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section12" class="sideLink u-link">
+          <p class="sideText">skewed-border</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section13" class="sideLink u-link">
+          <p class="sideText">glow-neon-button</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section14" class="sideLink u-link">
+          <p class="sideText">scroll-curve</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section15" class="sideLink u-link">
+          <p class="sideText">shadow-text</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section16" class="sideLink u-link">
+          <p class="sideText">scroll-snap</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section17" class="sideLink u-link">
+          <p class="sideText">scroll-snap</p>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
 
 
