--- a/practice/src/section/_section1.ejs
+++ b/practice/src/section/_section1.ejs
@@ -1,4 +1,4 @@
-<section class="section section1">
+<section class="section section1" id="section1">
   <div class="secTtl">
     <h2 class="secTtl__text">
       scroll-snap
@@ -16,8 +16,7 @@
 
 
   <div class="secNote">
-    <h3>注意事項</h3>
-    <p>特に無し</p>
+    <h3>cssのみで作成</h3>
   </div>
 
 
