--- a/practice/src/section/_section10.ejs
+++ b/practice/src/section/_section10.ejs
@@ -1,4 +1,4 @@
-<section class="section section10">
+<section class="section section10" id="section10">
   <div class="secTtl">
     <h2 class="secTtl__text">
       clip-path(svgのみ全ブラウザ対応)
