--- a/practice/src/section/_section11.ejs
+++ b/practice/src/section/_section11.ejs
@@ -1,4 +1,4 @@
-<section class="section section11">
+<section class="section section11" id="section11">
   <div class="secTtl">
     <h2 class="secTtl__text">
       spin text
