--- a/practice/src/section/_section12.ejs
+++ b/practice/src/section/_section12.ejs
@@ -1,6 +1,6 @@
-<section class="section section12">
+<section class="section section12" id="section12">
   <div class="secTtl">
-    <h2 class="secTtl__text">
+    <h2 class="secTtl__text section12__text">
       skewed-border
     </h2>
   </div>
@@ -10,19 +10,19 @@
     <div class="wrap">
       <div class="bg bg--1"></div>
       <div class="box">
-        <div class="cont">
-          <h2 class="cont__h2">
+        <div class="sec12-cont">
+          <h2 class="sec12-cont__h2">
             01
           </h2>
-          <h3 class="cont__h3">
+          <h3 class="sec12-cont__h3">
             service one
           </h3>
-          <p class="cont__text">
+          <p class="sec12-cont__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
             quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
             saepe culpa.
           </p>
-          <a href="" class="cont__more">Read More</a>
+          <a href="" class="sec12-cont__more">Read More</a>
         </div>
 
       </div>
@@ -30,19 +30,19 @@
     <div class="wrap">
       <div class="bg bg--2"></div>
       <div class="box">
-        <div class="cont">
-          <h2 class="cont__h2">
+        <div class="sec12-cont">
+          <h2 class="sec12-cont__h2">
             02
           </h2>
-          <h3 class="cont__h3">
+          <h3 class="sec12-cont__h3">
             service twe
           </h3>
-          <p class="cont__text">
+          <p class="sec12-cont__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
             quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
             saepe culpa.
           </p>
-          <a href="" class="cont__more">Read More</a>
+          <a href="" class="sec12-cont__more">Read More</a>
         </div>
 
       </div>
@@ -50,19 +50,19 @@
     <div class="wrap">
       <div class="bg bg--3"></div>
       <div class="box">
-        <div class="cont">
-          <h2 class="cont__h2">
+        <div class="sec12-cont">
+          <h2 class="sec12-cont__h2">
             03
           </h2>
-          <h3 class="cont__h3">
+          <h3 class="sec12-cont__h3">
             service three
           </h3>
-          <p class="cont__text">
+          <p class="sec12-cont__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
             quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
             saepe culpa.
           </p>
-          <a href="" class="cont__more">Read More</a>
+          <a href="" class="sec12-cont__more">Read More</a>
         </div>
 
       </div>
