--- a/practice/src/section/_section15.ejs
+++ b/practice/src/section/_section15.ejs
@@ -1,4 +1,19 @@
-<section class="section13">
+<section class="section section15" id="section15">
+  <div class="secTtl">
+    <h2 class="secTtl__text textWhite">
+      shadow-text
+    </h2>
+  </div>
 
+  <div class="shadow">
+    <h2 class="shadowText">
+      <span class="shadowText__span shadowText__span--1">S</span>
+      <span class="shadowText__span shadowText__span--2">h</span>
+      <span class="shadowText__span shadowText__span--3">a</span>
+      <span class="shadowText__span shadowText__span--4">d</span>
+      <span class="shadowText__span shadowText__span--5">o</span>
+      <span class="shadowText__span shadowText__span--6">w</span>
+    </h2>
+  </div>
 
 </section>
