--- a/practice/src/section/_section16.ejs
+++ b/practice/src/section/_section16.ejs
@@ -1,4 +1,13 @@
-<section class="section13">
+<section class="section section16" id="section16">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      fill with water
+    </h2>
+  </div>
 
+  <div class="sec16">
+    <div class="cup">
 
+    </div>
+  </div>
 </section>
