--- a/practice/src/section/_section17.ejs
+++ b/practice/src/section/_section17.ejs
@@ -1,30 +1,8 @@
-<section class="section section17">
+<section class="section section17" id="section17">
   <div class="secTtl">
-    <h2 class="secTtl__text">
-      glow-neon-button
+    <h2 class="secTtl__text section17__text">
+
     </h2>
   </div>
-  <div class="neon">
-    <a href="" class="neonLink neonLink--1">
-      <span class="neonSpan neonSpan--1"></span>
-      <span class="neonSpan neonSpan--2"></span>
-      <span class="neonSpan neonSpan--3"></span>
-      <span class="neonSpan neonSpan--4"></span>
-      Neon Button
-    </a>
-    <a href="" class="neonLink neonLink--2">
-      <span class="neonSpan neonSpan--1"></span>
-      <span class="neonSpan neonSpan--2"></span>
-      <span class="neonSpan neonSpan--3"></span>
-      <span class="neonSpan neonSpan--4"></span>
-      Neon Button
-    </a>
-    <a href="" class="neonLink neonLink--3">
-      <span class="neonSpan neonSpan--1"></span>
-      <span class="neonSpan neonSpan--2"></span>
-      <span class="neonSpan neonSpan--3"></span>
-      <span class="neonSpan neonSpan--4"></span>
-      Neon Button
-    </a>
-  </div>
+
 </section>
