--- a/practice/src/section/_section2.ejs
+++ b/practice/src/section/_section2.ejs
@@ -1,4 +1,4 @@
-<section class="section section2">
+<section class="section section2" id="section2">
   <div class="secTtl">
     <h2 class="secTtl__text">
       details+summary
@@ -10,19 +10,14 @@
     <details>
       <summary>クリック</summary>
       <div class="summary-wrap">
-        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
-        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
-        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+        <p class="summary-text">
+          <<注意事項>>
+        </p><br>
+        <p class="summary-text">■ie&edgeで対応なし</p><br>
+        <p class="summary-text">■アニメーション不可</p><br>
+        <p class="summary-text">■現状実用性なしだが、上記3項目を満たせば<br>アコーディオンにjavascript不要</p>
+
       </div>
     </details>
   </div>
-
-
-  <div class="secNote">
-    <h3>注意事項</h3>
-    <p>ie&edgeで対応なし</p>
-    <p>アニメーション不可</p>
-    <p>パッと表示のときのみ可能</p>
-  </div>
-
 </section>
