--- a/practice/src/section/_section3.ejs
+++ b/practice/src/section/_section3.ejs
@@ -1,4 +1,4 @@
-<section class="section section3">
+<section class="section section3" id="section3">
   <div class="secTtl">
     <h2 class="secTtl__text">
       pulse
