--- a/practice/src/section/_section5.ejs
+++ b/practice/src/section/_section5.ejs
@@ -1,4 +1,4 @@
-<section class="section section5">
+<section class="section section5" id="section5">
 
   <div class="secTtl">
     <h2 class="secTtl__text">
