--- a/practice/src/section/_section7.ejs
+++ b/practice/src/section/_section7.ejs
@@ -1,4 +1,4 @@
-<section class="section section7">
+<section class="section section7" id="section7">
   <div class="secTtl">
     <h2 class="secTtl__text">
       mouse-stalker
