--- a/practice/src/section/_section8.ejs
+++ b/practice/src/section/_section8.ejs
@@ -1,4 +1,4 @@
-<section class="section section8">
+<section class="section section8" id="section8">
   <div class="secTtl">
     <h2 class="secTtl__text">
       Sass Loop
