--- a/practice/src/assets/scss/section/_section14.scss
+++ b/practice/src/assets/scss/section/_section14.scss
@@ -1,3 +1,36 @@
 @charset "utf-8";
 
-.section13 {}
+.section14 {
+  background-color: #d1fff5;
+
+}
+
+
+.curve {
+  width: 900px;
+  height: 400px;
+  margin: 0 auto;
+  background-color: #fff;
+  position: relative;
+  overflow: hidden;
+  overflow-y: scroll;
+
+  &Range {
+    height: 1000px;
+  }
+
+
+  &Wrap {
+    width: 300%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    border-top: 5px solid rgb(117, 222, 255);
+  }
+
+  &Img {
+    transform-origin: top;
+    transform: scaleY(0);
+  }
+}
