--- a/practice/src/assets/scss/utility/_u-utility.scss
+++ b/practice/src/assets/scss/utility/_u-utility.scss
@@ -1,32 +1,47 @@
 @charset "utf-8";
-.u{
-    &-mt00{
-        margin-top: 0;
+
+.u {
+  &-mt00 {
+    margin-top: 0;
+  }
+
+  &-pci {
+    display: inline-block;
+
+    @include sp {
+      display: none;
     }
-    &-pci{
-        display:inline-block;
-        @include sp{
-            display:none;
-        }
+  }
+
+  &-spi {
+    display: none;
+
+    @include sp {
+      display: inline-block;
     }
-    &-spi{
-        display:none;
-        @include sp{
-            display:inline-block;
-        }
+  }
+
+  &-pc {
+    display: block;
+
+    @include sp {
+      display: none;
     }
-    &-pc{
-        display:block;
-        @include sp{
-            display:none;
-        }
+  }
+
+  &-sp {
+    display: none;
+
+    @include sp {
+      display: block;
     }
-    &-sp{
-        display:none;
-        @include sp{
-            display:block;
-        }
-    }
+  }
+
+  &-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 
 
 }
