--- a/practice/src/section/_section14.ejs
+++ b/practice/src/section/_section14.ejs
@@ -1,4 +1,22 @@
-<section class="section13">
+<section class="section section14" id="section14">
+  <div class="secTtl">
+    <h2 class="secTtl__text section14__text">
+      scroll-curve
+    </h2>
+  </div>
 
+  <div class="curve">
+    <div class="curveRange">
+      <div class="curveWrap">
+        <svg xmlns="http://www.w3.org/2000/svg" class="curveImg" viewBox="0 0 1200 600">
+          <path id="curve" data-name="curve" d="M1587,333c-653.065,1350-1200,0-1200,0Z" transform="translate(-387 -333)"
+            fill="#75deff" />
+        </svg>
+
+
+
+      </div>
+    </div>
+  </div>
 
 </section>
