--- a/practice/src/section/_section4.ejs
+++ b/practice/src/section/_section4.ejs
@@ -1,4 +1,4 @@
-<section class="section section4">
+<section class="section section4" id="section4">
 
   <div class="secTtl">
     <h2 class="secTtl__text">
