--- a/practice/src/section/_section6.ejs
+++ b/practice/src/section/_section6.ejs
@@ -1,4 +1,4 @@
-<section class="section section6">
+<section class="section section6" id="section6">
 
   <div class="secTtl">
     <h2 class="secTtl__text">
