--- a/practice/src/section/_section9.ejs
+++ b/practice/src/section/_section9.ejs
@@ -1,4 +1,4 @@
-<section class="section section9">
+<section class="section section9" id="section9">
   <div class="secTtl">
     <h2 class="secTtl__text">
       date attribute
