starting to create web directory

--- a/practice/src/assets/scss/section/_section1.scss
+++ b/practice/src/assets/scss/section/_section1.scss
@@ -5,7 +5,7 @@ body {
   z-index: 0;
 }
 
-// 共通部分------------------------------------------------
+// å…±é€šéƒ¨åˆ†------------------------------------------------
 .section {
   margin: 0 auto 40px;
   padding: 80px 0;
