--- a/practice/src/index.ejs
+++ b/practice/src/index.ejs
@@ -32,6 +32,14 @@
   <%- include(page.root + 'section/_section15', {param:'param'}); %>
   <%- include(page.root + 'section/_section16', {param:'param'}); %>
   <%- include(page.root + 'section/_section17', {param:'param'}); %>
+  <%- include(page.root + 'section/_section18', {param:'param'}); %>
+  <!-- <%- include(page.root + 'section/_section19', {param:'param'}); %> -->
+  <!-- <%- include(page.root + 'section/_section20', {param:'param'}); %>
+  <%- include(page.root + 'section/_section21', {param:'param'}); %>
+  <%- include(page.root + 'section/_section22', {param:'param'}); %>
+  <%- include(page.root + 'section/_section23', {param:'param'}); %>
+  <%- include(page.root + 'section/_section24', {param:'param'}); %>
+  <%- include(page.root + 'section/_section25', {param:'param'}); %> -->
 
 
 </main>
