--- a/practice/src/section/_section17.ejs
+++ b/practice/src/section/_section17.ejs
@@ -1,8 +1,14 @@
-<section class="section section17" id="section17">
+<section class="section section17 sec17" id="section17">
   <div class="secTtl">
-    <h2 class="secTtl__text section17__text">
-
+    <h2 class="secTtl__text sec17__text">
+      type writing
     </h2>
   </div>
 
+
+  <div class="sec17Wrap">
+    <p class="sec17Message">
+
+    </p>
+  </div>
 </section>
