--- a/practice/public/assets/css/index.css
+++ b/practice/public/assets/css/index.css
@@ -4293,6 +4293,103 @@ body {
     background-position: 0 172px
   }
 }
+.section17 {
+  background-color: #deffd1
+}
+.sec17Wrap {
+  width: 900px;
+  margin: 0 auto;
+  padding: 100px 100px;
+  background-color: #0a0a0a
+}
+.sec17Message {
+  position: relative;
+  color: #fff;
+  font-size: 20px
+}
+.text-cursor:after {
+  background: #fff;
+  content: '-';
+  width: 5px;
+  height: 20px;
+  margin-left: 5px;
+  margin-top: 5px;
+  position: absolute;
+  animation: cursorBlinker 1.5s infinite;
+  -webkit-animation: cursorBlinker 1.5s infinite
+}
+@-webkit-keyframes cursorBlinker {
+  0% {
+    opacity: 0
+  }
+  25% {
+    opacity: 1
+  }
+  50% {
+    opacity: 0
+  }
+  75% {
+    opacity: 1
+  }
+  100% {
+    opacity: 0
+  }
+}
+@keyframes cursorBlinker {
+  0% {
+    opacity: 0
+  }
+  25% {
+    opacity: 1
+  }
+  50% {
+    opacity: 0
+  }
+  75% {
+    opacity: 1
+  }
+  100% {
+    opacity: 0
+  }
+}
+.section18 {
+  background-color: #fffcd6
+}
+.blackBg {
+  position: relative;
+  width: 900px;
+  margin: 0 auto;
+  overflow: hidden
+}
+.overlay {
+  position: absolute;
+  width: 2700px;
+  height: 2700px;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  will-change: left,top;
+  margin: auto auto;
+  background-image: -o-radial-gradient(transparent 0,transparent 4%,rgba(0,0,0,.25) 6%,rgba(0,0,0,.2) 7%,rgba(0,0,0,.9) 9%);
+  background-image: radial-gradient(transparent 0,transparent 4%,rgba(0,0,0,.25) 6%,rgba(0,0,0,.2) 7%,rgba(0,0,0,.9) 9%)
+}
+.range {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  z-index: 2;
+  cursor: pointer
+}
+.section19 {
+  background-color: #deffd1
+}
 .section2 {
   background-color: #ffd0d0
 }
@@ -4346,6 +4443,24 @@ summary::-webkit-details-marker {
 .summary-text {
   text-indent: -1em;
   padding-left: 1em
+}
+.section20 {
+  background-color: #deffd1
+}
+.section21 {
+  background-color: #deffd1
+}
+.section22 {
+  background-color: #deffd1
+}
+.section23 {
+  background-color: #deffd1
+}
+.section24 {
+  background-color: #deffd1
+}
+.section25 {
+  background-color: #deffd1
 }
 .section3 {
   background-color: #fff9df
