--- a/web/src/assets/scss/pages/_coding.scss
+++ b/web/src/assets/scss/pages/_coding.scss
@@ -2,6 +2,7 @@
 
 .coding {
   &First {
+    pointer-events: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -214,9 +215,23 @@
   }
 
   &Works {
-    width: 1526px;
+    width: 1100px;
     margin: 0 auto;
-    background-color: #fff;
+    padding: 200px 0;
+
+    &__wrap {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    &__cont {
+      width: 320px;
+      height: 200px;
+      background-color: #fff;
+      margin-bottom: 100px;
+    }
   }
 
 
