--- a/web/src/coding/index.ejs
+++ b/web/src/coding/index.ejs
@@ -142,5 +142,25 @@
 
 <main class="codingMain">
 
+
+
+  <section class="codingWorks">
+
+    <div class="codingWorks__wrap">
+      <div class="codingWorks__cont">
+      </div>
+      <div class="codingWorks__cont">
+      </div>
+      <div class="codingWorks__cont">
+      </div>
+      <div class="codingWorks__cont">
+      </div>
+    </div>
+
+  </section>
+
+
+
+
 </main>
 <%- include(page.root + 'common/_footer', {param:'param'}); %>
