--- a/web/src/common/_footer.ejs
+++ b/web/src/common/_footer.ejs
@@ -2,6 +2,7 @@
 
 </footer>
 <script type="text/javascript" src="<%-conf.path.js%>bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </body>
 
 </html>
