--- a/web/web/assets/css/index.css
+++ b/web/web/assets/css/index.css
@@ -3430,6 +3430,7 @@ blockquote:before {
   }
 }
 .codingFirst {
+  pointer-events: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -3601,9 +3602,28 @@ blockquote:before {
   background-color: #000
 }
 .codingWorks {
-  width: 1526px;
+  width: 1100px;
   margin: 0 auto;
-  background-color: #fff
+  padding: 200px 0
+}
+.codingWorks__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap
+}
+.codingWorks__cont {
+  width: 320px;
+  height: 200px;
+  background-color: #fff;
+  margin-bottom: 100px
 }
 .js-jack {
   -webkit-animation: jackInTheBox .4s forwards;
